--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
 
         <div id="info">
             <div>
-                <span>
-            &#10003;-Done || 
-            &#8473;-Progress || 
-            &#9747;-Delete ||
-            </span>
+            Double click to edit!
             </div>
             <button id="clearall">Clear All</button> 
         </div>
